# cloud-detection

./: .editorconfig  .gitignore  README.md  pyproject.toml
cloud_detection/: train.py
cloud_detection/augmentation/: augmentations.py
cloud_detection/configs/: config.py
cloud_detection/data/: data_loader.py  data_reader.py
cloud_detection/modules/: cloud_net.py  optimizer.py
cloud_detection/notebooks/: main.ipynb
cloud_detection/utils/: image_utils.py  tracker.py
